force-app/main/default/objects/Pickup__c/fields/Reschedule_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reschedule Pickup</label>
    <type>Checkbox</type>
</CustomField>