force-app/main/default/objects/Pickup__c/fields/Scan_Button_Visiable__c.field-meta.xml
<CustomField>
    <fullName>Scan_Button_Visiable__c</fullName>
    <formula>IF(NOT(ISBLANK( Shipment__c )),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scan Button Visiable</label>
    <type>Checkbox</type>
</CustomField>