force-app/main/default/objects/Pickup__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pickups (Ship To)</relationshipLabel>
    <relationshipName>Pickups1</relationshipName>
    <type>Lookup</type>
</CustomField>