force-app/main/default/objects/Pickup__c/fields/Shipment_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Shipment_18_Digit_ID__c</fullName>
    <formula>Shipment__r.X18_Digit_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipment 18 Digit ID</label>
    <type>Text</type>
</CustomField>