force-app/main/default/objects/Pickup__c/fields/Shipper_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipper Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AddressBook__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>AddressBook__c.Customer__c</field>
            <operation>equals</operation>
            <valueField>$Source.Shipper_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AddressBook__c</referenceTo>
    <relationshipLabel>Pickups (Shipper Address)</relationshipLabel>
    <relationshipName>Pickups2</relationshipName>
    <type>Lookup</type>
</CustomField>