force-app/main/default/objects/Pickup__c/fields/Shipper_Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Address_ID__c</fullName>
    <label>Shipper Address ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>