force-app/main/default/objects/Pickup__c/fields/Shipper_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Shipping</value>
        </filterItems>
        <filterItems>
            <field>Account.Customer_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pickups (Shipper Name)</relationshipLabel>
    <relationshipName>ShipperName</relationshipName>
    <type>Lookup</type>
</CustomField>