force-app/main/default/objects/Pickup__c/fields/ShippingNoteNo__c.field-meta.xml
<CustomField>
    <fullName>ShippingNoteNo__c</fullName>
    <label>ShippingNoteNo</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>