force-app/main/default/objects/Pickup__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Pickup Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Pickup Cancelled</fullName>
            </value>
            <value>
                <fullName>Update Successfully</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>