force-app/main/default/objects/Pickup__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <formula>MID(TEXT( Pickup_Date_and_Time__c ), 12, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test time</label>
    <type>Text</type>
</CustomField>