force-app/main/default/objects/Pickup__c/fields/Type_Of_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Pickup__c</fullName>
    <label>Type Of Pickup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>