force-app/main/default/objects/Pickup__c/fields/TypeOfPickup__c.field-meta.xml
<CustomField>
    <fullName>TypeOfPickup__c</fullName>
    <label>Type Of Pickup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>