force-app/main/default/objects/Pickup__c/fields/Value_of_Picked_Up_Shipments__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Picked_Up_Shipments__c</fullName>
    <label>Value of Picked Up Shipments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>