force-app/main/default/objects/Pickup__c/fields/Zone_Code__c.field-meta.xml
<CustomField>
    <fullName>Zone_Code__c</fullName>
    <formula>BVC_Origin_Hub__r.Zone_Master_Name__r.Zone_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone Code</label>
    <type>Text</type>
</CustomField>