force-app/main/default/objects/Pickup__c/fields/Zone_Name__c.field-meta.xml
<CustomField>
    <fullName>Zone_Name__c</fullName>
    <formula>BVC_Origin_Hub__r.Zone_Master_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone Name</label>
    <type>Text</type>
</CustomField>