force-app/main/default/objects/Pickup__c/recordTypes/Domestic.recordType-meta.xml
<RecordType>
    <fullName>Domestic</fullName>
    <active>true</active>
    <label>Domestic</label>
</RecordType>