force-app/main/default/objects/Pickup__c/recordTypes/Pickup_Form.recordType-meta.xml
<RecordType>
    <fullName>Pickup_Form</fullName>
    <active>true</active>
    <label>Pickup Form</label>
</RecordType>