force-app/main/default/objects/Pickup__c/validationRules/Pickup_Assigned_To_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Pickup_Assigned_To_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED(Pickup_Assigned_To__c) , OR( TEXT( Pickup_Status__c ) == &apos;Completed&apos; ,TEXT( Pickup_Status__c ) == &apos;Cancelled&apos;))</errorConditionFormula>
    <errorDisplayField>Pickup_Assigned_To__c</errorDisplayField>
    <errorMessage>Cant Reassign if status is Completed</errorMessage>
</ValidationRule>