force-app/main/default/objects/Pickup__c/validationRules/Recurring_End_Date_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_End_Date_mandatory</fullName>
    <active>true</active>
    <description>When Recurring is set to true</description>
    <errorConditionFormula>Recurring__c  = True   &amp;&amp;  ISNULL(Recurring_End_Date__c  )</errorConditionFormula>
    <errorDisplayField>Recurring_End_Date__c</errorDisplayField>
    <errorMessage>Please enter Recurring End Date</errorMessage>
</ValidationRule>