force-app/main/default/objects/Pickup__c/listViews/All_Completed.listView-meta.xml
<ListView>
    <fullName>All_Completed</fullName>
    <columns>NAME</columns>
    <columns>Shipper_Name__c</columns>
    <columns>Origin_Address_Line1__c</columns>
    <columns>Pickup_Id__c</columns>
    <columns>Pickup_Status__c</columns>
    <columns>Created_Date__c</columns>
    <columns>Origin_Address_Phone__c</columns>
    <columns>Origin_Address_Person__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pickup_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed</label>
</ListView>