force-app/main/default/objects/Pickup__c/listViews/All_Pending.listView-meta.xml
<ListView>
    <fullName>All_Pending</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Shipping_Note_Number__c</columns>
    <columns>Pickup_Date__c</columns>
    <columns>BVC_Origin_Hub__c</columns>
    <columns>Customer__c</columns>
    <columns>Customer_Category__c</columns>
    <columns>Shipper_Name__c</columns>
    <columns>Pickup_Date_and_Time__c</columns>
    <columns>Origin_Address_Line1__c</columns>
    <columns>Pickup_City__c</columns>
    <columns>Pickup_Route_Number__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Pickup_Assigned_To__c</columns>
    <columns>Pickup_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pickup_Status__c</field>
        <operation>equals</operation>
        <value>Created,Assigned,Completed,Cancelled</value>
    </filters>
    <filters>
        <field>Created_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Pickup__c.Domestic</value>
    </filters>
    <label>Pending Pickup</label>
</ListView>