force-app/main/default/objects/Pickup__c/listViews/BLR_Pickup_Status.listView-meta.xml
<ListView>
    <fullName>BLR_Pickup_Status</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Pickup_Date_and_Time__c</columns>
    <columns>NAME</columns>
    <columns>BVC_Origin_Hub__c</columns>
    <columns>Shipper_Name__c</columns>
    <columns>Origin_Address_Line1__c</columns>
    <columns>Shipping_Note_Number__c</columns>
    <columns>Pickup_Route_Number__c</columns>
    <columns>Pickup_Assigned_To__c</columns>
    <columns>Pickup_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Pickup__c.Domestic</value>
    </filters>
    <filters>
        <field>Created_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>BLR - Pickup Status</label>
</ListView>