force-app/main/default/objects/Pickup__c/listViews/Copy_of_Pickup_Status_MUMBAI_ZB.listView-meta.xml
<ListView>
    <fullName>Copy_of_Pickup_Status_MUMBAI_ZB</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Pickup_Date_and_Time__c</columns>
    <columns>BVC_Origin_Hub__c</columns>
    <columns>Pickup_Assigned_To__c</columns>
    <columns>Pickup_Status__c</columns>
    <columns>Pickup_Time_Slot__c</columns>
    <columns>Shipment__c</columns>
    <columns>Shipping_Note_Number__c</columns>
    <columns>Shipper_Name__c</columns>
    <columns>Origin_Address_Line1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BVC_Origin_Hub__c</field>
        <operation>equals</operation>
        <value>MUMBAI-SCP</value>
    </filters>
    <filters>
        <field>Created_Date__c</field>
        <operation>lessOrEqual</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Pickup__c.Domestic</value>
    </filters>
    <label>Pickup Status-MUMBAI-SCP</label>
    <sharedTo>
        <group>TMS_Branch_Managers</group>
        <group>TMS_Managers</group>
    </sharedTo>
</ListView>