force-app/main/default/objects/Pickup__c/listViews/Pending_Pickup_from_Shipment.listView-meta.xml
<ListView>
    <fullName>Pending_Pickup_from_Shipment</fullName>
    <columns>Shipping_Note_Number__c</columns>
    <columns>Shipment__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Pickup_Date__c</columns>
    <columns>BVC_Origin_Hub__c</columns>
    <columns>Shipper_Name__c</columns>
    <columns>Shipper_Address__c</columns>
    <columns>Origin_Address_Pincode__c</columns>
    <columns>Pickup_Status__c</columns>
    <columns>Pickup_Route_Number__c</columns>
    <columns>Pickup_Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Pickup__c.Domestic</value>
    </filters>
    <filters>
        <field>Pickup_Status__c</field>
        <operation>equals</operation>
        <value>Created,Assigned</value>
    </filters>
    <filters>
        <field>Shipping_Note_Number__c</field>
        <operation>contains</operation>
        <value>UV,DS</value>
    </filters>
    <label>Pending Pickup from Shipment</label>
</ListView>