force-app/main/default/objects/Pickup__c/listViews/Pickup_Status_MUMBAI_DPCC.listView-meta.xml
<ListView>
    <fullName>Pickup_Status_MUMBAI_DPCC</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>BVC_Origin_Hub__c</columns>
    <columns>Pickup_Assigned_To__c</columns>
    <columns>Pickup_Status__c</columns>
    <columns>Shipment__c</columns>
    <columns>Shipping_Note_Number__c</columns>
    <columns>Shipper_Name__c</columns>
    <columns>Origin_Address_Line1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BVC_Origin_Hub__c</field>
        <operation>equals</operation>
        <value>MUMBAI-DPCC</value>
    </filters>
    <filters>
        <field>Created_Date__c</field>
        <operation>lessOrEqual</operation>
    </filters>
    <label>Pickup Status-MUMBAI-DPCC</label>
    <sharedTo>
        <group>TMS_Branch_Managers</group>
        <group>TMS_Managers</group>
    </sharedTo>
</ListView>